Mobile Response Updaete

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
          <!-- Some Fact Section -->
          <section>
             <h3 class="section-facts">Some Facts</h3>
-            <p class="facts-section-description">This is the some factor where Awards Winnings, Project Finished,Clients Worked, Email Send. From this section we can see lots of icon.</p>
+            <p class="facts-section-description">This is the some factor where Awards Winnings, Project Finished,Clients Worked, Email Send. From this section we can see lots of icon response.</p>
             <div class="facts-container">
                 <div class="fact">
                     <img src="images/icons/ribon.png" alt="">
@@ -148,7 +148,7 @@
          <section>
             <h3 class="section-sponsors">Our Sponsors</h3>
             <p class="sponsor-description">This section is represent to our sponsorship.
-            In <br>this sponsorship, there are google,amazon,spotify,telerama,figma include.</p>
+            In <br>this sponsorship, there are google, amazon,spotify, telegrama, figma include.</p>
             <div class="sponsors-container">
                 <div class="sponsors">
                     <img src="images/sponsors/spotify.png" alt=""> 
@@ -173,7 +173,7 @@
          <!-- Bonus section -->
          
          <section class="contact">
-            <h3 class="section-sponsors">Contact Us</h3>
+            <h3 class="contact-title">Contact Us</h3>
             <div class="contact-div">
                 <div class="contact-box">
                     <div class="single-box">
@@ -197,7 +197,7 @@
         <!-- End Of Bons Section -->
          <!-- Start Footer Section -->
          <section class="footer-styles">
-         <footer >
+         <footer class="footer-media">
             <h2>All rights reserved copyright@2023 startup landing page design</h2>
         </footer>
     </section>
