--- a/index.html
+++ b/index.html
@@ -83,20 +83,20 @@
                  <div class="feature-card-gap">
                     <div class="feature-card" >
                         <h4 class="feature-card-title new-pad">Dexktop & Mobile Version</h4>
-                        <p class="description">Hi.! I am Md Shariar Rahman Oion. I am a professional web developer. I have experienced in creating web sites with HTML, CSS, Boostrab, JavaScript...........</p>
+                        <p class="description">Hi.! I am Md Shariar Rahman Oion. I am a professional web developer. I have experienced in...........</p>
                     </div>
                 </div>
 
                 <div class="feature-card-gap">
                     <div class="feature-card">
                         <h4 class="feature-card-title new-pad">Drag & Drop Builder</h4>
-                        <p class="description">Hi.! I am Md Shariar Rahman Oion. I am a professional web developer. I have experienced in creating web sites with HTML, CSS, Boostrab, JavaScript...........</p>
+                        <p class="description">Hi.! I am Md Shariar Rahman Oion. I am a professional web developer. I have experienced in...........</p>
                     </div>
                 </div>
                 <div class="feature-card-gap">
                     <div class="feature-card">
                         <h3 class="feature-card-title new-pad new-pad">Awesome Modern Design</h3>
-                        <p class="description">Hi.! I am Md Shariar Rahman Oion. I am a professional web developer. I have experienced in creating web sites with HTML, CSS, Boostrab, JavaScript...........</p>
+                        <p class="description">Hi.! I am Md Shariar Rahman Oion. I am a professional web developer. I have experienced in...........</p>
                     </div>
                     </div>
                 
@@ -108,7 +108,9 @@
                 </div>
                 <div>
                     <img src="images/architect.png" alt="">
-                    <button class="btn-primary"><i class="fa-solid fa-user"></i> Explore More</button>
+                    <div class="btn-tansform">
+                       <span class="btn-title">10+ Year</span> <br> <span class="btn-description">Experience</span> 
+                    </div>
                 </div>
                 
             </div>
@@ -196,11 +198,11 @@
         </section >
         <!-- End Of Bons Section -->
          <!-- Start Footer Section -->
-         <section class="footer-styles">
+    <section class="footer-styles">
          <footer class="footer-media">
             <h2>All rights reserved copyright@2023 startup landing page design</h2>
         </footer>
-    </section>
+    </section> 
          <!-- End Footer Section -->
 
     </main>
